--- a/angular基本指令.html
+++ b/angular基本指令.html
@@ -22,6 +22,7 @@
             background-color: green;
         }
     </style>
+
 </head>
 <body ng-app="testApp">
 <div>
@@ -79,6 +80,9 @@
         </li>
     </ul>
 
+    <div class="title">ng-cloak指令</div>
+    <div>{{person}}</div>
+    <div ng-cloak=>{{person}}</div>
 </div>
 <script src="https://cdn.bootcss.com/angular.js/1.6.9/angular.js"></script>
 <script src="https://cdn.bootcss.com/angular.js/1.6.9/angular-route.js"></script>
